packages/taquito-michel-codec/test/contracts_013/ill_typed/stack_bottom_undugable.tz
parameter unit;
storage unit;
code {
       DROP;
       DUG 0;
     }
